tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__FastFancyStripes-zLE6OyCFT8ih5eSJVainBQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2343366902965380869,
  "prerequisites": [
    12781008759503747684
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Ion Thruster is the advanced version of the Rocket Engine. Each Ion Thruster Base provides 25MN of force and holds up to 2,000L of Xenon. Electric power is needed, too.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§oFast§r Fancy Stripes!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12781008759503747684
  ],
  "rewards": [],
  "tasks": []
}
