tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__FindSomeMeteoric-AAAAAAAAAAAAAAAAAAAFkg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1426,
  "prerequisites": [
    1433
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To reach tier two planets like Mars or its moons, Phobos and Deimos you need a better rocket. Your next goal is Tier two rocket plates which need Meteoric Iron.\n\nYou will find small meteoric iron ore under the surface. Use an HV miner or multiblock miner to get extra fortune on small ores. Small meteoric iron is only from Y 50-70, so try to find tall hills.\n\nYou can also just mine the fallen meteors on the surface. Use your ears to listen to their impacts.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Find Some Meteoric Iron",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1433
  ],
  "rewards": [],
  "tasks": []
}
