tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__FormaldehydeCata-AAAAAAAAAAAAAAAAAAAJWw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2395,
  "prerequisites": [
    2688
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Time for the last tier of Rocket Fuel. First, make some Formaldehyde. It will require a catalyst. You can make it by mixing Iron and Vanadium, and placing the mix into a carrier.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lFormaldehyde Catalyst",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2688
  ],
  "rewards": [],
  "tasks": []
}
