tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__FuelingYourBuggy-AAAAAAAAAAAAAAAAAAAFnA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1436,
  "prerequisites": [
    1434
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The moon buggy needs fuel to work. Build a 3x3 fueling pad, connect it with a fuel loader, and place the buggy on top.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fueling Your Buggy",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1434
  ],
  "rewards": [],
  "tasks": []
}
