tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__GasErUp-AAAAAAAAAAAAAAAAAAADNQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 821,
  "prerequisites": [
    819
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To pump fuel into your rocket you need a fuel loader. Place it next to any side of the launch pad. The green side is for energy, while the yellow is for fuel. Pipe it in if you don't want to lose your cells.\n\nYou can also power it with batteries, if you're worried about it draining your power, or don't want to set up the infrastructure.\n\n[note]Rockets keep their fuel in them on landing now, so you don't need to take this with you anymore unless you want to go to multiple places in one trip. Or you didn't fill it all the way or something.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Gas 'Er Up",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    819
  ],
  "rewards": [],
  "tasks": []
}
