tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__Grapple-AAAAAAAAAAAAAAAAAAAFwA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1472,
  "prerequisites": [
    1462
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Grapple is a grappling hook and rope which can be thrown by a player, and then used to swing the player in the direction it was thrown. Useful for reaching places that are otherwise too high to jump to, or traveling around the Asteroids. [note](Or just, you know, fly.)[/note]\n\nRight-click to aim the Grapple at a block you want to reach, similar to aiming a Bow. Release the right-click - similar to firing an arrow from a bow - to grapple yourself in that direction.\n\nFor best results, aim the Grapple at a point 1 or 2 blocks higher than the point you want to reach.\n\nIf there is no safe platform to land at that point, you can fall back down and you will take fall damage, so it takes some skill to use the Grapple safely.\n\nTake care using the Grapple near a Nether Portal, End Portal or at a low height (less than Y30) on a Space Station. There can be strange consequences if it crosses into another dimension.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Grapple",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1462
  ],
  "rewards": [],
  "tasks": []
}
