tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__GravityBoots-AAAAAAAAAAAAAAAAAAAGxg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1734,
  "prerequisites": [
    1733
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These boots will help you fall faster in low gravity environments. Or not. Maybe. Give them a try.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Gravity Boots",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1733
  ],
  "rewards": [],
  "tasks": []
}
